--- a/src/css/base.css
+++ b/src/css/base.css
@@ -88,7 +88,7 @@ main:has(.back-link) {
   padding-top: 8px;
   padding-bottom: 8px;
 }
-.form button {
+button {
   border-radius: 8px;
   padding: 8px 16px;
   width: 91px;
@@ -101,7 +101,7 @@ main:has(.back-link) {
   color: #fff;
   border: none;
 }
-.form button:hover {
+button:hover {
   background-color: #6c8cff;
 }
 .form input:hover {
@@ -126,9 +126,9 @@ main:has(.back-link) {
   align-items: center;
   justify-content: center;
   gap: 24px;
-  width: 100%;
-  height: 648px;
+
   margin-top: 0px;
+  margin-bottom: 50px;
 }
 
 .gallery-item {
@@ -179,6 +179,7 @@ main:has(.back-link) {
   color: #111010;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10px;
 }
 .loader:before,
 .loader:after {
@@ -247,4 +248,11 @@ main:has(.back-link) {
 
 .is-hidden {
   display: none;
+}
+
+.js-button {
+  margin-left: auto;
+  margin-right: auto;
+  width: 125px;
+  margin-bottom: 25px;
 }
