--- a/src/css/base.css
+++ b/src/css/base.css
@@ -32,6 +32,7 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   margin: 0;
+  background-color: #c7c7cb;
 }
 
 main {
@@ -77,6 +78,7 @@ main:has(.back-link) {
 .form input {
   border: 1px solid #808080;
   border-radius: 4px;
+  background-color: #d9d7d7;
   width: 360px;
   height: 40px;
   font-weight: 400;
@@ -87,6 +89,7 @@ main:has(.back-link) {
   padding-left: 16px;
   padding-top: 8px;
   padding-bottom: 8px;
+  box-shadow: 4px 4px 10px rgba(3, 3, 3, 0.415);
 }
 button {
   border-radius: 8px;
@@ -100,6 +103,7 @@ button {
   letter-spacing: 0.04em;
   color: #fff;
   border: none;
+  box-shadow: 4px 4px 10px rgba(3, 3, 3, 0.415);
 }
 button:hover {
   background-color: #6c8cff;
@@ -132,11 +136,18 @@ button:hover {
 }
 
 .gallery-item {
-  width: 360px;
+  width: calc((100% - 4 * 24px) / 5);
+  box-shadow: 4px 4px 10px rgba(3, 3, 3, 0.415);
   height: 200px;
   position: relative;
   overflow: hidden;
   border: 1px solid #808080;
+  border-radius: 5px;
+  transition: transform 0.5s ease;
+}
+
+.gallery-item:hover {
+  transform: scale(1.05);
 }
 
 .gallery-image {
@@ -145,6 +156,7 @@ button:hover {
   object-fit: cover;
 }
 .image-info-block {
+  padding: 10px;
   height: 48px;
   display: flex;
   justify-content: space-evenly;
@@ -155,15 +167,13 @@ button:hover {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 40px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 2;
   letter-spacing: 0.04em;
   color: #2e2f42;
 }
 .bold {
-  font-weight: 600;
+  font-weight: 800;
   font-size: 12px;
   line-height: 1.33;
   letter-spacing: 0.04em;
@@ -251,8 +261,18 @@ button:hover {
 }
 
 .js-button {
-  margin-left: auto;
-  margin-right: auto;
   width: 125px;
   margin-bottom: 25px;
+  align-items: center;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  max-width: 1440px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
